Setting Java SDK to 16 for compatibility